# ZLEComp

./: ..clang-format.icloud  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: bump_tag.yml  cmake_full_test.yml  cmake_linux.yml  cmake_linux_test.yml  cmake_macos_win_release.yml  cmake_macos_win_test.yml  cmake_quick.yml  cmake_release.yml  sync_release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: computer_attach.cpp  computer_attach.h  controller.cpp  controller.h  controller_attach.cpp  controller_attach.h  detector_attach.cpp  detector_attach.h  dsp_defines.h  dsp_definitions.h
Source/DSP/Computer/: computer.cpp  computer.h  spline.h
Source/DSP/Detector/: detector.cpp  detector.h  iter_funcs.h  rms_tracker.cpp  rms_tracker.h  tracker.h
Source/DSP/FixedBuffer/: fifo_audio_buffer.cpp  fifo_audio_buffer.h  fixed_audio_buffer.cpp  fixed_audio_buffer.h
Source/DSP/Meter/: meter.h
Source/GUI/: ButtonComponent.h  ButtonLookAndFeel.h  ChangingValueComponent.h  ComboboxComponent.h  ComboboxLookAndFeel.h  NameLookAndFeel.h  RotarySliderComponent.h  RotarySliderLookAndFeel.h  button_component.h  button_look_and_feel.h  combo_box_component.h  combobox_look_and_feel.h  interface_defines.h  interface_definitions.h  linear_slider_component.h  linear_slider_look_and_feel.h  meter_component.h  meter_look_and_feel.h  name_look_and_feel.h  rotary_slider_component.h  rotary_slider_look_and_feel.h
Source/Panel/: center_panel.cpp  center_panel.h  logo_panel.cpp  logo_panel.h  main_panel.cpp  main_panel.h  monitor_panel.cpp  monitor_panel.h  panel_definitions.h  plot_panel.cpp  plot_panel.h
Source/Panel/CenterPanel/: center_panel.cpp  center_panel.h  monitor_panel.cpp  monitor_panel.h  monitor_sub_panel.cpp  monitor_sub_panel.h  plot_panel.cpp  plot_panel.h
Source/Panel/MeterPanel/: meter_panel.cpp  meter_panel.h
Source/Panel/SettingPanel/: computer_setting_panel.cpp  computer_setting_panel.h  detector_setting_panel.cpp  detector_setting_panel.h  global_setting_panel.cpp  global_setting_panel.h  setting_panel.cpp  setting_panel.h
Source/Panel/StatePanel/: logo_panel.cpp  logo_panel.h  process_state_panel.cpp  process_state_panel.h  state_panel.cpp  state_panel.h  ui_state_panel.cpp  ui_state_panel.h
Source/State/: dummy_processor.cpp  dummy_processor.h  property.cpp  property.h  state_defines.h  state_definitions.h
packaging/: dmg.json  installer.iss
resources/presets/: default.xml  half_rms_m.xml  nothing.xml
